--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         tools:targetApi="31" >
 
         <activity
-            android:name=".SplashScreen"
+            android:name=".Splashpage"
             android:screenOrientation="landscape"
             android:exported="true">
             <intent-filter>
@@ -24,7 +24,18 @@
         </activity>
 
         <activity
-            android:name=".MainMenu"
+            android:name=".Mainmenu"
+            android:screenOrientation="landscape"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"></action>
+                <category android:name="android.intent.category.DEFAULT"></category>
+            </intent-filter>
+
+        </activity>
+
+        <activity
+            android:name=".GamePage"
             android:screenOrientation="landscape"
             android:exported="true">
             <intent-filter>
